# AdaptixC2-MCP-Server

./: .env.example  .gitignore  README.md  bofs.yaml  config.py  mcp_session_notes.md  pyproject.toml  requirements.txt  server.py
client/: adaptix_client.py
models/: agent.py  task.py
services/: agent_service.py  reporting_service.py  task_service.py
tools/: _context.py  _helpers.py  agents.py  execution.py  extensions.py  filesystem.py  networking.py  recon.py  reporting.py
utils/: logging.py  validation.py
