[project]
name = "AdaptixC2-Mcp-Server"
version = "0.1.0"
description = "AdaptixC2 MCP Server — headless operator client for AdaptixC2 teamserver"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "websocket-client>=1.9.0",
    "requests>=2.32.5",
]

[project.scripts]
AdaptixC2-Mcp-Server = "server:main"

[dependency-groups]
dev = []
